--- a/src/style.scss
+++ b/src/style.scss
@@ -38,16 +38,16 @@ body {
 	}
 
 
-	.section.slider{ 
-		
-		width: 100%;
-		.container{
-			padding: 0;
-			margin: 0;
+	.is-set-to-zero{
+		padding: 0;
+		margin: 0;
+	}
 
-		}
-
-		
+	.container-full-screen{
+		min-width: 100%;
+	}
+	.section{
+		background-color: $grey;
 	}
 
 	.navbar{
