--- a/src/style.scss
+++ b/src/style.scss
@@ -68,9 +68,10 @@ body {
 	.container-full-screen{
 		min-width: 100%;
 	}
-	// .section{
-	// 	background-color: $grey;
-	// }
+
+	.is-white{
+		color: #ffffff;
+	}
 	.media{
 		// background-color: #ffffff;
 		padding-top: 1rem;
