basic search done  and filters started

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,8 @@
 @charset "utf-8";
 
 // Import a Google Font
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
+// @import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
+@import url('https://fonts.googleapis.com/css?family=Muli:400,700');
 
 //change colors
 $secondary: #282c34;
@@ -24,12 +25,15 @@ $navbar-item-hover-background-color: none;
 * {
 	scroll-behavior: smooth;
 	box-sizing: border-box;
+	font-family: 'Muli', sans-serif;
 }
 
 body {
 	padding-bottom: 20px;
 	background-color: $grey;
 	margin: 0;
+	height: 100vh;
+	// login and register forms
 	.form-section {
 		margin-top: 50px;
 		height: 105vh;
@@ -97,7 +101,7 @@ body {
 			padding: 40px 70px 40px 0;
 		}
 	}
-
+	// everything navbar
 	.navbar {
 		.navbar-start {
 			.field {
@@ -139,6 +143,27 @@ body {
 		}
 		.field:not(:last-child) {
 			margin-bottom: 0rem;
+		}
+	}
+
+	// everything search page
+	.search-page {
+		min-height: 100vh;
+		background-color: $secondary;
+		.search-hero {
+			background-image: url("https://bigbossbattle.com/wp-content/uploads/2018/04/GRIP-Panorama.jpg");
+			background-size: cover;
+			.is-1 {
+				color: $white;
+				font-size: 5em;
+			}
+		}
+		.search-section {
+			input {
+				border: none;
+				border-bottom: 2px solid $primary;
+				font-size: 1.5em !important;
+			}
 		}
 	}
 }
