--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,8 @@
 @charset "utf-8";
 
 // Import a Google Font
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
+// @import url('https://fonts.googleapis.com/css?family=Nunito:400,700%27);
+@import url('https://fonts.googleapis.com/css?family=Muli:400,700%27');
 
 //change colors
 $secondary: #282c34;
@@ -22,10 +23,10 @@ $navbar-item-hover-background-color: none;
 @import "~react-alice-carousel/lib/alice-carousel.css";
 
 * {
-	scroll-behavior: smooth;
-	box-sizing: border-box;
+    scroll-behavior: smooth;
+    box-sizing: border-box;
+    font-family: 'Muli', sans-serif;
 }
-
 body {
 	padding-bottom: 20px;
 	background-color: $grey;
@@ -86,11 +87,11 @@ body {
 		padding-top: 1rem;
 		padding-bottom: 1rem;
 		.media-left {
-			height: 250px;
-			width: 250px;
+			height: 300px;
+			width: 500px;
 			.img {
-				height: 250px;
-				width: 250px;
+				height: 300px;
+				width: 500px;
 			}
 		}
 		.content {
