changed home screen

--- a/src/style.scss
+++ b/src/style.scss
@@ -57,6 +57,11 @@ body {
 		}
 	}
 
+	//home page
+	.home-hero {
+		background-image: url('https://images.alphacoders.com/942/thumb-1920-942234.jpg');
+		background-size: cover;
+	}
 	.is-centered {
 		text-align: center;
 	}
