--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,6 @@
 @charset "utf-8";
 
 // Import a Google Font
-// @import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
 @import url('https://fonts.googleapis.com/css?family=Muli:400,700');
 
 //change colors
@@ -61,6 +60,18 @@ body {
 	.home-hero {
 		background-image: url('https://images.alphacoders.com/942/thumb-1920-942234.jpg');
 		background-size: cover;
+		margin-top: 20px;
+		.is-1 {
+			font-size: 4em;
+		}
+		.is-3 {
+			font-size: 2.5em;
+		}
+		.is-1,
+		.is-3 {
+			color: $grey !important;
+			text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+		}
 	}
 	.is-centered {
 		text-align: center;
