--- a/src/style.scss
+++ b/src/style.scss
@@ -18,6 +18,7 @@ $input-focus-border-color: $primary;
 $input-focus-box-shadow-size: 0;
 $navbar-item-color: $primary;
 $navbar-item-hover-background-color: none;
+$pagination-color: $primary;
 @import "~bulma/bulma";
 @import "~react-alice-carousel/lib/alice-carousel.css";
 
@@ -28,7 +29,7 @@ $navbar-item-hover-background-color: none;
 }
 
 body {
-	padding-bottom: 20px;
+	padding-bottom: 40px;
 	background-color: $grey;
 	margin: 0;
 	height: 100vh;
@@ -164,6 +165,7 @@ body {
 
 	// everything search page
 	.search-page {
+		padding-bottom: 100px;
 		min-height: 100vh;
 		background-color: $secondary;
 		.search-hero {
