working on load more news

--- a/src/style.scss
+++ b/src/style.scss
@@ -78,6 +78,10 @@ body {
 	.is-centered {
 		text-align: center;
 	}
+	.has-margin{
+		margin-top: 30px;
+		height: auto;
+	}
 
 	.news {
 		height: auto;
