--- a/src/style.scss
+++ b/src/style.scss
@@ -33,7 +33,7 @@ body {
 	padding-bottom: 40px;
 	background-color: $grey;
 	margin: 0;
-	height: 100vh;
+	min-height: 100vh;
 	// login and register forms
 	.form-section {
 		margin-top: 50px;
@@ -78,7 +78,7 @@ body {
 	.is-centered {
 		text-align: center;
 	}
-	.has-margin{
+	.has-margin {
 		margin-top: 30px;
 		height: auto;
 	}
@@ -175,6 +175,8 @@ body {
 		min-height: 100vh;
 		background-color: $secondary;
 		.search-hero {
+			box-shadow: inset 0px 0px 16px 16px $primary;
+			border-radius: 5px;
 			background-image: url("https://i.imgur.com/63EK4EK.jpg");
 			background-size: cover;
 			.is-1 {
@@ -210,6 +212,8 @@ body {
 		.game-show {
 			min-height: 100vh;
 			.game-hero {
+				border-radius: 5px;
+				box-shadow: inset 0px 0px 16px 16px $primary;
 				background-image: url("https://i.imgur.com/lj3MVwM.jpg");
 				background-size: cover;
 				.is-1 {
