starting on the chat box functionality

--- a/src/style.scss
+++ b/src/style.scss
@@ -225,7 +225,7 @@ body {
 		.column{
 			height: auto;
 			.inbox{
-				height: 400px;
+				height: 70vh;
 				overflow: scroll;
 				background: white;
 
@@ -235,6 +235,9 @@ body {
 			}
 			&:last-child {
 				background: blue;
+				.form{
+					margin-top: 20px;
+				}
 				.control{
 					&:first-child {
 						width: 100%;
@@ -242,9 +245,9 @@ body {
 
 				}
 			}
-			.chatroom{
+			.chatroom, .message{
 				background: green;
-				height: 50px;
+				height: 70px;
 				width: 100%;
 				margin-bottom: 3px;
 			}
