getting there with the layout

--- a/src/style.scss
+++ b/src/style.scss
@@ -245,7 +245,7 @@ body {
 
 				}
 			}
-			.chatroom, .message{
+			.inbox-users, .message{
 				background: green;
 				height: 70px;
 				width: 100%;
