startig on the chatbox functionality

--- a/src/style.scss
+++ b/src/style.scss
@@ -250,7 +250,15 @@ body {
 				height: 70px;
 				width: 100%;
 				margin-bottom: 3px;
+				.send{
+					background: blue;
+				}
+				.recived{
+					background: red;
+
+				}
 			}
+
 		}
 
 	}
