--- a/src/style.scss
+++ b/src/style.scss
@@ -29,6 +29,11 @@ $pagination-color: $primary;
 	box-sizing: border-box;
 	font-family: 'Muli', sans-serif;
 }
+
+.testing{
+	background-color: green;
+	height: 20px;
+}
 body {
 	padding-bottom: 40px;
 	background-color: $grey;
