set up summary section

--- a/src/style.scss
+++ b/src/style.scss
@@ -254,6 +254,15 @@ body {
 					}
 				}
 			}
+			.data-section {
+				.info {
+					padding-bottom: 10px;
+					strong {
+						color: $primary;
+					}
+					color: $primary;
+				}
+			}
 		}
 	}
 	// everything for chat room
