set up video modal

--- a/src/style.scss
+++ b/src/style.scss
@@ -264,6 +264,10 @@ body {
 					}
 					color: $primary;
 				}
+				#video-modal {
+					height: 315px !important;
+					width: 560px !important;
+				}
 			}
 		}
 	}
