--- a/src/style.scss
+++ b/src/style.scss
@@ -241,6 +241,9 @@ body {
 				height: 330px;
 				width: 250px;
 				.card-content {
+					.button {
+						margin-bottom: 12px;
+					}
 					padding: 0;
 					padding-top: 25px;
 				}
