made some changes

--- a/src/style.scss
+++ b/src/style.scss
@@ -330,8 +330,8 @@ body {
 
 	//
 	#twitch-embed{
-		height: 480px;
-		width: 940px;
+		height: 700px;
+		width: auto;
 		background-color: red;
 		iframe{
 			height: 100%;
